--- a/src/Manassa/Windows/MainWindow.xaml
+++ b/src/Manassa/Windows/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:ribbon="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
         xmlns:manassa="clr-namespace:Manassa.Windows"
         Title="MultiAlign"         
-        Height="989" 
-        Width="999"
+        Height="1243" 
+        Width="1209"
         Icon="/Manassa;component/Resources/logo.png">
 
     <Window.Resources>        
@@ -18,151 +18,180 @@
         <BitmapImage x:Key="Unknown" UriSource="pack://application:,,,/Resources/unknown.png" />
     </Window.Resources>
     
-    <Grid
-        Margin="4"
-        >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        <Grid
+            DockPanel.Dock="Top"
+            Margin="4"
+            >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+            <ribbon:Ribbon 
+                Grid.Column="0"
+                x:Name="Ribbon">
+                <ribbon:Ribbon.ApplicationMenu>
+                    <ribbon:RibbonApplicationMenu                     
+                        SmallImageSource="{StaticResource ResourceKey=MenuIcon}"
+                        LargeImageSource="{StaticResource ResourceKey=MenuIcon}"
+                        >                    
+                        <ribbon:RibbonApplicationMenuItem Header="_New"  
+                                                          IsEnabled="False"        
+                                                          ImageSource="{StaticResource ResourceKey=NewIcon}"
+                                                          x:Name="NewAnalysisMenuButton">                        
+                        </ribbon:RibbonApplicationMenuItem>
+                        <ribbon:RibbonSeparator/>
+                        <ribbon:RibbonApplicationMenuItem Header="_Open"                                                      
+                                                          x:Name="LoadAnalysisMenuButton"        
+                                                          ImageSource="{StaticResource ResourceKey=FolderIcon}"                                              
+                                                          Click="LoadAnalysisMenuButton_Click">                        
+                        </ribbon:RibbonApplicationMenuItem>
+                        <ribbon:RibbonSeparator/>
+                        <ribbon:RibbonApplicationMenuItem Header="_Close"
+                                                          IsEnabled="False"
+                                                          x:Name="CloseMenuButton"/>
+                        <ribbon:RibbonSeparator/>
+                        <ribbon:RibbonApplicationMenuItem Header="_Exit"
+                                                          IsEnabled="False"
+                                                          x:Name="ExitMenuButton"/>
+                    </ribbon:RibbonApplicationMenu>
+                </ribbon:Ribbon.ApplicationMenu>
+                <ribbon:RibbonTab x:Name="AnalysisTab" 
+                                  Header="Analysis">
+                    <ribbon:RibbonGroup x:Name="GeneralAnalysisGroup"                                     
+                                        Header="General">
+                        <ribbon:RibbonButton x:Name="NewAnalysisButton"
+                                             IsEnabled="False"
+                                             LargeImageSource="{StaticResource ResourceKey=NewIcon}"
+                                             Label="New" />
+                        <ribbon:RibbonButton x:Name="LoadOptionsButton"
+                                             Label="Open"
+                                             LargeImageSource="{StaticResource ResourceKey=FolderIcon}"
+                                             Click="LoadAnalysisMenuButton_Click"/>                    
+                        <ribbon:RibbonButton x:Name="AnalysisOptionsButton"
+                                             IsEnabled="False"
+                                             Label="Options" />
+                    </ribbon:RibbonGroup>
+                    <ribbon:RibbonGroup x:Name="LCMSFeatureFindingGroup" 
+                                        IsEnabled="False"
+                                        Header="Find Features">
+                        <ribbon:RibbonButton x:Name="FeatureFindingOptions"
+                                             Label="Options" />                    
+                    </ribbon:RibbonGroup>
+                    <ribbon:RibbonGroup x:Name="AlignmentAnalysisGroup" 
+                                        IsEnabled="False"
+                                        Header="Alignment">
+                        <ribbon:RibbonButton x:Name="Button1"
+                                             Label="Select Baseline"
+                                             LargeImageSource="{StaticResource ResourceKey=AlignmentIcon}"/>
+                        <ribbon:RibbonButton x:Name="Button2"
+                                             Label="Options" />
+                    </ribbon:RibbonGroup>
+                    <ribbon:RibbonGroup x:Name="ClustersAnalysisbGroup" 
+                                        IsEnabled="False"
+                                        Header="Cluster">
+                        <ribbon:RibbonComboBox x:Name="ClusterDropDown"
+                                             Label="Select Algorithm"/>
+                        <ribbon:RibbonButton x:Name="ClusterOptionsButton"
+                                             Label="Options" />
+                    </ribbon:RibbonGroup>
+                    <ribbon:RibbonGroup x:Name="IdentifyAnalysisTab" 
+                                        Header="Identify" IsEnabled="false">
+                        <ribbon:RibbonButton x:Name="stacButton"
+                                             Label="STAC / AMT" />
+                        <ribbon:RibbonButton x:Name="deNovoButton"
+                                             Label="de novo" />
+                        <ribbon:RibbonComboBox Label="Search databases"/>
 
-        <ribbon:Ribbon 
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            x:Name="Ribbon">
-            <ribbon:Ribbon.ApplicationMenu>
-                <ribbon:RibbonApplicationMenu                     
-                    SmallImageSource="{StaticResource ResourceKey=MenuIcon}"
-                    LargeImageSource="{StaticResource ResourceKey=MenuIcon}"
-                    >                    
-                    <ribbon:RibbonApplicationMenuItem Header="_New"  
-                                                      IsEnabled="False"        
-                                                      ImageSource="{StaticResource ResourceKey=NewIcon}"
-                                                      x:Name="NewAnalysisMenuButton">                        
-                    </ribbon:RibbonApplicationMenuItem>
-                    <ribbon:RibbonSeparator/>
-                    <ribbon:RibbonApplicationMenuItem Header="_Open"                                                      
-                                                      x:Name="LoadAnalysisMenuButton"        
-                                                      ImageSource="{StaticResource ResourceKey=FolderIcon}"                                              
-                                                      Click="LoadAnalysisMenuButton_Click">                        
-                    </ribbon:RibbonApplicationMenuItem>
-                    <ribbon:RibbonSeparator/>
-                    <ribbon:RibbonApplicationMenuItem Header="_Close"
-                                                      IsEnabled="False"
-                                                      x:Name="CloseMenuButton"/>
-                    <ribbon:RibbonSeparator/>
-                    <ribbon:RibbonApplicationMenuItem Header="_Exit"
-                                                      IsEnabled="False"
-                                                      x:Name="ExitMenuButton"/>
-                </ribbon:RibbonApplicationMenu>
-            </ribbon:Ribbon.ApplicationMenu>
-            <ribbon:RibbonTab x:Name="AnalysisTab" 
-                              Header="Analysis">
-                <ribbon:RibbonGroup x:Name="GeneralAnalysisGroup"                                     
-                                    Header="General">
-                    <ribbon:RibbonButton x:Name="NewAnalysisButton"
-                                         IsEnabled="False"
-                                         LargeImageSource="{StaticResource ResourceKey=NewIcon}"
-                                         Label="New" />
-                    <ribbon:RibbonButton x:Name="LoadOptionsButton"
-                                         Label="Open"
-                                         LargeImageSource="{StaticResource ResourceKey=FolderIcon}"
-                                         Click="LoadAnalysisMenuButton_Click"/>                    
-                    <ribbon:RibbonButton x:Name="AnalysisOptionsButton"
-                                         IsEnabled="False"
-                                         Label="Options" />
-                </ribbon:RibbonGroup>
-                <ribbon:RibbonGroup x:Name="LCMSFeatureFindingGroup" 
-                                    IsEnabled="False"
-                                    Header="Find Features">
-                    <ribbon:RibbonButton x:Name="FeatureFindingOptions"
-                                         Label="Options" />                    
-                </ribbon:RibbonGroup>
-                <ribbon:RibbonGroup x:Name="AlignmentAnalysisGroup" 
-                                    IsEnabled="False"
-                                    Header="Alignment">
-                    <ribbon:RibbonButton x:Name="Button1"
-                                         Label="Select Baseline"
-                                         LargeImageSource="{StaticResource ResourceKey=AlignmentIcon}"/>
-                    <ribbon:RibbonButton x:Name="Button2"
-                                         Label="Options" />
-                </ribbon:RibbonGroup>
-                <ribbon:RibbonGroup x:Name="ClustersAnalysisbGroup" 
-                                    IsEnabled="False"
-                                    Header="Cluster">
-                    <ribbon:RibbonComboBox x:Name="ClusterDropDown"
-                                         Label="Select Algorithm"/>
-                    <ribbon:RibbonButton x:Name="ClusterOptionsButton"
-                                         Label="Options" />
-                </ribbon:RibbonGroup>
-                <ribbon:RibbonGroup x:Name="IdentifyAnalysisTab" 
-                                    Header="Identify" IsEnabled="false">
-                    <ribbon:RibbonButton x:Name="stacButton"
-                                         Label="STAC / AMT" />
-                    <ribbon:RibbonButton x:Name="deNovoButton"
-                                         Label="de novo" />
-                    <ribbon:RibbonComboBox Label="Search databases"/>
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="DatasetTab" 
+                                  Header="Datasets">
+                    <ribbon:RibbonGroup x:Name="GeneralDatasetsGroup" 
+                                        Header="General">                    
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="MsMsTab" 
+                                  Header="MS/MS">
+                    <ribbon:RibbonGroup x:Name="MsMsGroup" 
+                                        Header="Networks" IsEnabled="false">
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="FeaturesTab" 
+                                  Header="LC-MS Features">
+                    <ribbon:RibbonGroup x:Name="FeaturesGroup" 
+                                        Header="Normalization" IsEnabled="false">
+                        <ribbon:RibbonButton x:Name="noramlizeFeatureAbundanceButton"
+                                             Label="Normalize Abundances" />
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="ClustersTab" 
+                                  Header="LC-MS Clusters">
+                    <ribbon:RibbonGroup x:Name="ClustersGroup" 
+                                        Header="Clusters" IsEnabled="True">
 
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="DatasetTab" 
-                              Header="Datasets">
-                <ribbon:RibbonGroup x:Name="GeneralDatasetsGroup" 
-                                    Header="General">                    
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="MsMsTab" 
-                              Header="MS/MS">
-                <ribbon:RibbonGroup x:Name="MsMsGroup" 
-                                    Header="Networks" IsEnabled="false">
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="FeaturesTab" 
-                              Header="LC-MS Features">
-                <ribbon:RibbonGroup x:Name="FeaturesGroup" 
-                                    Header="Normalization" IsEnabled="false">
-                    <ribbon:RibbonButton x:Name="noramlizeFeatureAbundanceButton"
-                                         Label="Normalize Abundances" />
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="ClustersTab" 
-                              Header="LC-MS Clusters">
-                <ribbon:RibbonGroup x:Name="ClustersGroup" 
-                                    Header="Clusters" IsEnabled="True">
-
-                    <ribbon:RibbonToggleButton x:Name="ShowAttributedClusters"
-                                               LargeImageSource="{StaticResource ResourceKey=Molecule}"
-                                         Label="Attributed"/>
-                    <ribbon:RibbonToggleButton x:Name="ShowUnAttributedClusters"
-                                               LargeImageSource="{StaticResource ResourceKey=Unknown}"
-                                         Label="Unattributed"/>
-                    <ribbon:RibbonToggleButton x:Name="ShowMsMsClusters"
-                                         Label="Have MS/MS"/>
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="StatisticsTab" 
-                              Header="Statistics">
-                <ribbon:RibbonGroup x:Name="StatisticsAbundanceGroup" 
-                                    Header="Abundance" IsEnabled="false">
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-            <ribbon:RibbonTab x:Name="IdentificationsTab" 
-                              Header="Identifications">
-                <ribbon:RibbonGroup x:Name="AmtGroup" 
-                                    Header="AMT" IsEnabled="false">
-                </ribbon:RibbonGroup>
-            </ribbon:RibbonTab>
-        </ribbon:Ribbon>        
+                        <ribbon:RibbonToggleButton x:Name="ShowAttributedClusters"
+                                                   LargeImageSource="{StaticResource ResourceKey=Molecule}"
+                                             Label="Attributed"/>
+                        <ribbon:RibbonToggleButton x:Name="ShowUnAttributedClusters"
+                                                   LargeImageSource="{StaticResource ResourceKey=Unknown}"
+                                             Label="Unattributed"/>
+                        <ribbon:RibbonToggleButton x:Name="ShowMsMsClusters"
+                                             Label="Have MS/MS"/>
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="StatisticsTab" 
+                                  Header="Statistics">
+                    <ribbon:RibbonGroup x:Name="StatisticsAbundanceGroup" 
+                                        Header="Abundance" IsEnabled="false">
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+                <ribbon:RibbonTab x:Name="IdentificationsTab" 
+                                  Header="Identifications">
+                    <ribbon:RibbonGroup x:Name="AmtGroup" 
+                                        Header="AMT" IsEnabled="false">
+                    </ribbon:RibbonGroup>
+                </ribbon:RibbonTab>
+            </ribbon:Ribbon>        
         
-        <!-- Selection Window -->        
-        <manassa:AnalysisView 
-            x:Name="m_mainControl"
-            Grid.Column="1"      
-            IsEnabled="False"
-            Grid.Row="1"/>
-    </Grid>
+            <!-- Selection Window -->        
+            <manassa:AnalysisView 
+                x:Name="m_mainControl"
+                Grid.Column="0"      
+                IsEnabled="False"
+                Grid.Row="1"/>
+
+            <StatusBar 
+                Grid.Row="2"
+                Grid.Column="0"
+                Height="32">
+                <StatusBar.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="4*"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </StatusBar.ItemsPanel>
+                <StatusBarItem>
+                    <TextBlock>Ready</TextBlock>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="1">
+                    <Separator></Separator>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="1">
+                    <ProgressBar Value="30" Width="80" Height="18"/>
+                </StatusBarItem>
+            </StatusBar>
+        </Grid>        
 </Window>
