--- a/src/Manassa/Windows/MsMsViewer.xaml
+++ b/src/Manassa/Windows/MsMsViewer.xaml
@@ -30,23 +30,28 @@
                     Height="3"
                     />
 
-        <GridSplitter
+            <GridSplitter
                     Grid.Row="0"
                     Grid.Column="1"
                     Width="3"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"                                
                     />
-        <maWindows:MsMsGrid
+        <TabControl
                 Grid.Row="0"   
-                Grid.Column="0"
-                Grid.RowSpan="3"
-                x:Name="m_msmsGrid"            
-                />
-        
-            <WindowsFormsHost 
-                Grid.Row="2"
                 Grid.Column="2"
+                >
+            <TabItem
+                Header="MS/MS">
+                <maWindows:MsMsGrid
+                            x:Name="m_msmsGrid"/>
+            </TabItem>
+        </TabControl>
+
+        <WindowsFormsHost 
+                Grid.Row="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
                 >
                 <maCharts:SpectraChart
                     x:Name="m_spectraChart"
@@ -56,7 +61,7 @@
             </WindowsFormsHost>
             <WindowsFormsHost
                 Grid.Row="0"
-                Grid.Column="2">
+                Grid.Column="0">
                 <maCharts:MsMsChart
                     LegendVisible="True"
                     x:Name="m_msmsScatterPlot"/>
